--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#42d8ed</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#be0a0a</color>
-    <color name="codecolour">#FFFF</color>
+    <color name="codecolour">#ffffff</color>
 </resources>
