--- a/app/src/main/res/layout/activity_benchmark.xml
+++ b/app/src/main/res/layout/activity_benchmark.xml
@@ -49,7 +49,7 @@ tools:context=".Benchmark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnNext"
-        android:onClick="sendMessage"
+        android:onClick="sendMessage (Benchmark)"
         tools:textColor="@color/codecolour"
         tools:background="@color/colorPrimary"/>
 
